--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,12 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+body {
+  width: 100vw;
+  height: 100vh;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
